<resources>
    <string name="app_name">Meme Maker</string>
    <string name="watermark">Meme Maker+</string>

    <string name="admob_id"></string>
    <string name="banner_ad_unit_id"></string>

    <string name="label_btn_camera">Camera</string>
    <string name="label_btn_memes">Memes</string>
    <string name="label_btn_album">Album</string>
    <string name="title_web_selector">Choose your Meme</string>
    <string name="top_text">Top text</string>
    <string name="bottom_text">Bottom text</string>
    <string name="error_permission_required">Permission required.</string>
</resources>
